--- a/noticias.html
+++ b/noticias.html
@@ -76,7 +76,7 @@
 		<!-- Theme Custom -->
 		<script src="js/custom.js"></script>
 		<!-- Theme Initialization Files -->
-		<script src="futebol.js"></script>
+		<script src="coletorNoticias.js"></script>
 		<script src="js/theme.init.js"></script>
 
 	</body>
